<resources>
    <string name="app_name">问果</string>
    <string name="invitation_code">邀请码</string>
    <string name="zxing_on">无二维码？点这里</string>
    <string name="main_speak">语音</string>
    <string name="tv_home">首页</string>
    <string name="tv_shopping_cart">钱包</string>
    <string name="user_center">我的</string>
    <string name="winguo_logo">问果科技股份有限公司</string>
    <string name="guide_jump">跳过</string>
    <string name="search_pop_click">搜索</string>
    <string name="register_no_phone_number">手机号码格式不正确</string>
    <string name="register_recommend_phone_error">推荐人手机号码格式不正确</string>
    <string name="action_settings">Settings</string>
    <string name="QRCodeButton">二维码扫描</string>
    <string name="SearchHint">请输入搜索关键字</string>
    <string name="user_name">请先注册/登录</string>
    <string name="user_wallet">我的钱包</string>
    <string name="menu_contact_send">分享</string>
    <string name="menu_contact_del">删除</string>
    <string name="user_balance">余额:</string>
    <string name="user_wallet_guobi">果币:</string>
    <string name="my_about_we">关于我们</string>
    <string name="phone_camera">相机</string>
    <string name="phone_gallery">相册</string>
    <string name="phone_cancel">取 消</string>
    <string name="main_shared">分享</string>
    <string name="main_comm_win">反馈</string>
    <string name="main_comm_help">帮助</string>
    <string name="my_client_phone">客服电话</string>
    <string name="my_check_update">检测更新</string>
    <string name="my_idea_feedback">意见反馈</string>
    <string name="my_help_voice">帮助中心</string>
    <string name="my_search_history">搜索记录</string>
    <string name="handpick_news">新闻推荐</string>
    <string name="life_service">生活服务</string>
    <string name="main_bt_nearby">周边</string>
    <string name="main_bt_stroll">首页</string>
    <string name="feed_back">用户反馈</string>
    <string name="help_win">帮助问法</string>
    <string name="my_client_phone_number">020-3887-1888</string>
    <string name="quit_login">退出当前账号</string>
    <string name="quit_zxing">扫一扫</string>
    <string name="my_feedback_phoneInfo">手机信息:</string>
    <string name="idea_content">请在此留下您的宝贵意见，让问过不断进步，谢谢！若您对商品活动及交易有所疑问，请拨打免费客服热线020–38871888进行咨询。
    </string>
    <string name="feedback_confirm">确定</string>
    <string name="user_feedback">意见反馈</string>
    <string name="net_search">搜索更多</string>
    <string name="search_app">应用</string>
    <string name="search_contact">联系人</string>
    <string name="main_more_search">搜索</string>
    <string name="shop_more_menu_refresh">刷新</string>
    <string name="help_tilebar">你可以这么说:</string>
    <string name="feedback_input_empty">反馈内容不能为空！</string>
    <string name="feedback_submit_error">请检查网络状态！</string>
    <string name="feedback_submit_ok">反馈提交成功！</string>
    <string name="login_title_st">登录</string>
    <string name="hybrid4_account_idcode_empty">验证码不能为空！</string>
    <string name="my_space_station">开通空间站</string>
    <string name="open_space_station_true">确定</string>
    <string name="my_open_space_text">开通空间站，轻松赚取丰厚佣金！</string>
    <string name="my_open_space_hint">空间站名字（2~8个字内）</string>
    <string name="my_open_space_tip">空间站</string>
    <string name="my_open_space_text2">为保证您的权益，请实名注册空间站名称！</string>
    <string name="my_open_space_text3">此名称全球唯一，先抢先得</string>
    <string name="hybrid4_account_info_open_space">正在为您开启空间站....</string>
    <string name="version_date">180112</string>
    <string name="home_today_shop">为你推荐</string>
    <string name="today_shop_price_RMB">¥</string>
    <string name="voicefun_prompt_speak_prepare_winguo">一问有结果</string>
    <string name="first_line">试试这么说</string>
    <string name="second_line">“给张三打电话”</string>
    <string name="third_line">“我饿了”</string>
    <string name="four_line">“附近的餐馆”</string>
    <string name="winguo_account_registration">注 册</string>
    <string name="login_bottom_text1">您生活的另一个家</string>
    <string name="login_bottom_text2">问果空间站</string>
    <string name="winguo_app_acoount_tip">( 请输入正确的11位手机号或邮箱 )</string>
    <string name="winguo_app_acoount_phone_tip">( 请输入正确的11位手机号 )</string>
    <string name="winguo_app_acoount_tip_null">( 手机号或邮箱不能为空 )</string>
    <string name="winguo_app_acoount_phone_tip_null">( 手机号不能为空 )</string>
    <string name="my_about_set">设置</string>
    <string name="camera_no_work">无法启动相机</string>
    <string name="camera_no_work_text1">扫描伙伴邀请码注册立得红包抽奖</string>
    <string name="camera_no_work_text2">前往开启相机权限设置</string>
    <string name="no_start_camera">不扫描，直接注册</string>
    <string name="start_camera">知道了，前往设置</string>
    <string name="mine_login_register">登录/注册</string>
    <string name="mine_location_text">广东 广州</string>
    <string name="my_family_server_text">我的城市服务</string>
    <string name="my_family_expect_server_text">敬请期待</string>
    <string name="hotel_text">住酒店</string>
    <string name="movie_text">看电影</string>
    <string name="dine_wine_text">吃喝玩乐</string>
    <string name="plane_ticket_text">查机票</string>
    <string name="traffic_text">查交通</string>
    <string name="my_family_circle_text">圈子口碑</string>
    <string name="my_family_phone_text">免费电话</string>
    <string name="my_family_chat_text">交友聊天</string>
    <string name="my_family_more_text">期待更多</string>
    <string name="my_family_wallect_text">我的钱包</string>
    <string name="my_family_partner_text">我的伙伴</string>
    <string name="my_family_order_text">我的订单</string>
    <string name="my_family_Collect_text">我的收藏</string>
    <string name="register_qr_code">推荐注册二维码</string>
    <string name="mine_partner_text">我的伙伴</string>
    <string name="mine_partners_profit">0个伙伴共盈利0元</string>
    <string name="search_all_order">查看全部订单</string>
    <string name="loose_wallect_text">零钱包</string>
    <string name="loose_wallect_default_text">0.00元</string>
    <string name="favorable_text">优惠包</string>
    <string name="bank_card">银行卡</string>
    <string name="bank_card_count">0 张</string>
    <string name="collect_goods_text">商品</string>
    <string name="collect_goods_count">0 件</string>
    <string name="collect_store">店铺</string>
    <string name="collect_store_count">0 间</string>
    <string name="winguo_app_account_forget_pwd">登录密码找回</string>
    <string name="winguo_account_tv_tip">填入手机号重设密码</string>
    <string name="winguo_account_resetpwd">重 置</string>
    <string name="hybrid4_account_prompt_newpassword1">确认密码</string>
    <string name="user_head_tip">头像</string>
    <string name="user_nickname_tip">问果昵称</string>
    <string name="user_nickname"></string>
    <string name="user_uid_tip">UID</string>
    <string name="user_uid">666666</string>
    <string name="user_phone_tip">手机号</string>
    <string name="user_phone"></string>
    <string name="user_qr_tip">二维码</string>
    <string name="user_area">请设置默认收货地址</string>
    <string name="user_area_tip">收货地址</string>
    <string name="user_age">请选择</string>
    <string name="user_age_tip">年龄</string>
    <string name="user_gender">请选择</string>
    <string name="user_gender_tip">性别</string>
    <string name="winguo_personal_info_title">个人资料设置</string>
    <string name="user_label">标签详情</string>
    <string name="user_label_tip">我的标签</string>
    <string name="gender_chioce_men">男</string>
    <string name="gender_chioce_women">女</string>
    <string name="personal_info_gender_men">男</string>
    <string name="personal_info_gender_women">女</string>
    <string name="mine_text">我家</string>
    <string name="order_wait_pay">待付款</string>
    <string name="order_goods_count">共 %1$d 件商品 合计:</string>
    <string name="order_delivery_charges">(含运费 %1$.2f )</string>
    <string name="order_comment">立即评价</string>
    <string name="order_pay">立即付款</string>
    <string name="order_wait_deliver">待发货</string>
    <string name="order_remind_seller">提醒卖家</string>
    <string name="order_wait_receive">待收货</string>
    <string name="order_look_delivery">查看物流</string>
    <string name="order_confirm_receive">确认收货</string>
    <string name="order_wait_close">已关闭</string>
    <string name="order_pay_chongxin_">重新下单</string>
    <string name="order_wait_finish">已完成</string>
    <string name="order_look_comment">查看评价</string>
    <string name="order_pay_zailai">再来一单</string>
    <string name="order_pay_zaici">再次购买</string>
    <string name="no_has_more_text">~已经到底限了~</string>
    <string name="loading_more_text">加载中…</string>
    <string name="loading_empty">抱歉，没有找到商品额~</string>
    <string name="no_net">网络请求失败</string>
    <string name="request_net">点击按钮重新加载</string>
    <string name="btn_request">重新加载</string>
    <string name="QRCodeScan">扫一扫上面的二维码，成为我的伙伴</string>
    <string name="qr_clode_type_text">我的二维码</string>
    <string name="my_about_we_settings">设置中心</string>
    <string name="no_order">抱歉，没有找到订单额~</string>
    <string name="no_history">抱歉，没有找到浏览记录额~</string>
    <string name="no_dynamic">暂无关注内容</string>
    <string name="no_goods_collect">抱歉，没有找到商品收藏额~</string>
    <string name="no_shop_collect">抱歉，没有找到店铺收藏额~</string>
    <string name="no_address">抱歉，没有找到收件人地址额~</string>
    <string name="no_evaluate">抱歉，没有找到商品评论额~</string>
    <string name="offline">您进入无网络的异次元空间!</string>
    <string name="request_net2">点击重新加载</string>
    <string name="timeout">网络不通畅,请检查!</string>
    <string name="user_label_finish">完成</string>
    <string name="you_on_stop">你未开通空间站，请先开通空间站</string>
    <string name="mycollect_attention_people">%1$d 人关注</string>
    <string name="mycollect_repertory">库存: %1$d</string>
    <string name="mycollect_delete">删除</string>
    <string name="mycollect_dialog_title">是否删除收藏商品</string>
    <string name="negative_text">取消</string>
    <string name="positive_text">确定</string>
    <string name="mycollect_title">我的收藏</string>
    <string name="mycollect_attention_goods">关注商品</string>
    <string name="mycollect_attention_shop">关注店铺</string>
    <string name="my_family_location_false">定位失败</string>
    <string name="shop_collect_number">收藏人数: %1$d</string>
    <string name="search_type">商品</string>
    <string name="search_type_pop_shop">商品</string>
    <string name="search_type_pop_service">服务</string>
    <string name="search_type_pop_local">本地</string>
    <string name="ssdk_oks_classic_sinaweibo">新浪</string>
    <string name="my_family_mine_share_nologin">您还未登录/未开通空间站，无法分享</string>
    <string name="search_history_title">搜索历史</string>
    <string name="search_history_clear">清空</string>
    <string name="timeout_confirm_receive_fail">连接超时!确认收货失败</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string-array name="fragments_titles">
        <item name="all_order">全\t\t部</item>
        <item name="wait_pay">待付款</item>
        <item name="wait_deliver">待发货</item>
        <item name="wait_receive">待收货</item>
        <item name="wait_comment">待评价</item>
    </string-array>
    <string name="data_index">/data/index</string>
    <string name="data_goods">/data/goods</string>
    <string name="data_goods_detail">/data/goods/info?</string>
    <string name="data_shop">/data/shop?</string>
    <string name="data_cart">/data/cart</string>
    <string name="data_userinfo">/data/userinfo</string>
    <string name="data_goods_collect">/data/goods_collect</string>
    <string name="data_order">/data/order</string>
    <string name="data_unionpay">/data/unionpay</string>
    <string name="goods_theme_url">/data/topic</string>
    <string name="physical_cart_search">/data/search/add</string>
    <string name="physical_confirm_order">/data/order/list</string>
    <string name="physical_submit_order">/data/order/submit</string>
    <string name="default_orders_text">综合</string>
    <string name="sale_orders_text">销量</string>
    <string name="price_orders_text">价格</string>
    <string name="product_screen_btn_text">筛选</string>
    <string name="product_screen_title_text">筛 选</string>
    <string name="product_screen_price_text">选择价格区间</string>
    <string name="product_screen_low_price_text">最低价</string>
    <string name="product_screen_hight_price_text">最高价</string>
</resources>