<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/ll_request"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical">
    <TextView
        android:id="@+id/no_net_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/margin_product_list_price_top"
        android:drawableTop="@drawable/no_net"
        android:gravity="center"
        android:text="@string/no_net"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_product_list_price_top"
        android:text="@string/request_net"/>
    <Button
        android:id="@+id/btn_request_net"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="#D1D1D1"
        android:text="@string/btn_request"
        android:textSize="13sp"/>

</LinearLayout>